# GI_Corp

./: README.md  pyproject.toml
gi_csv_app/: api_response.json  db.sqlite3  docker-compose.yaml  manage.py  requirements.txt  sample_data.csv  updated_records.csv
gi_csv_app/gi_csv_app/: asgi.py  settings.py  urls.py  wsgi.py
gi_csv_app/main_app/: middleware.py  models.py  serializers.py  tests.py  urls.py  views.py
gi_csv_app/main_app/migrations/: 0001_initial.py
